# werewolf-bds-launcher

./: README.md  package.json
.github/workflows/: release.yml
specs/: startup_and_usage.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bds.rs  lib.rs  main.rs  network.rs  updater.rs
