[package]
name = "bds-launcher"
version = "0.1.4"
description = "Bedrock Dedicated Server launcher for the Werewolf project"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bds_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
zip = "2"
igd-next = { version = "0.17", features = ["aio_tokio"] }
tokio = { version = "1", features = ["time"] }
tokio-tungstenite = { version = "0.30", features = ["native-tls"] }
futures-util = "0.3"
